# nucleus-proxy

./: .gitignore  README.md  debug_nucleus_paths.py  debug_stat.py  debug_upload.py  dev-setup.py  main.py  pyproject.toml  pytest.ini  run.py  run_integration_test.py  run_integration_test_real.py  run_integration_test_simple.py
app/: __init__.py  config.py  server.py
app/db/: __init__.py  sqlite.py
app/middleware/: __init__.py  monitoring.py  security.py
app/nucleus/: __init__.py  client.py
app/routes/: __init__.py  auth.py  files.py  monitoring.py  realtime.py  signed_urls.py  tenants.py  ui.py  uploads.py
app/services/: __init__.py  background_tasks.py  events.py  file_indexer.py  metrics.py  search_engine.py  security.py  tenancy.py  upload_manager.py  url_signer.py
app/static/: index.html
app/static/js/: nucleus-proxy-client.js
docs/: NucleusProtocol.md
tests/: conftest.py
tests/api/: test_core_api.py  test_tenancy_security.py
tests/integration/: test_files_operations.py  test_nucleus_real.py
tests/unit/: test_services.py
